--- a/FrontEnd/client/index.html
+++ b/FrontEnd/client/index.html
@@ -13,6 +13,7 @@
     <div id="button-scroll"></div>
     <div id="popup"></div>
     <div id="root"></div>
+    <div id="preview-multiple"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
