--- a/FrontEnd/client/index.html
+++ b/FrontEnd/client/index.html
@@ -14,6 +14,7 @@
     <div id="popup"></div>
     <div id="root"></div>
     <div id="preview-multiple"></div>
+    <div id="map-modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
